fixup! fix(docs-infra): make hamburger menu non focusable when not visible

--- a/aio/src/styles/1-layouts/top-menu/_top-menu.scss
+++ b/aio/src/styles/1-layouts/top-menu/_top-menu.scss
@@ -34,6 +34,7 @@ mat-toolbar.app-toolbar {
       .hamburger {
         // Hamburger shown on non-marketing pages even on large screens.
         margin: $hamburgerShownMargin;
+        visibility: visible;
       }
     }
   }
